# log.c

./: .gitignore  CMakeLists.txt  log.h  main.c
